--- a/config.gradle
+++ b/config.gradle
@@ -14,6 +14,8 @@ ext {
     _eventbusVersion = '3.0.0'
     _rxjavaLibVersion = '1.2.0'
     _rxAndroidVersion = '1.2.1'
+
+    _glideVersion = '4.0.0-RC1'
     dependencies = [
             // Rx
             rxJava                  : "io.reactivex:rxjava:$_rxjavaLibVersion",
@@ -34,7 +36,8 @@ ext {
             logging_interceptor     : 'com.squareup.okhttp3:logging-interceptor:3.3.0',
             greendao                : "org.greenrobot:greendao:$_greendaoVersion",
             eventbus                : "org.greenrobot:eventbus:$_eventbusVersion",
-            easyRecyclerView        : 'com.jude:easyrecyclerview:4.4.0'
-
+            easyRecyclerView        : 'com.jude:easyrecyclerview:4.4.0',
+            glide                   : "com.github.bumptech.glide:glide:$_glideVersion",
+            glideCompiler           : "com.github.bumptech.glide:compiler:$_glideVersion"
     ]
 }
