--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,8 @@ dependencies {
     compile dependencies.rxAndroid
     compile dependencies.easyRecyclerView
     compile dependencies.glide
+    compile dependencies.palette
     kapt dependencies.glideCompiler
-
     compile files('libs/jsoup-1.10.2.jar')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
