--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".module.docdetail.DocDetailActivity"/>
-        <activity android:name=".module.newsdetail.NewsDetailActivity"
-            android:theme="@style/AppTheme.Translucent.NewsDetailTheme"/>
+        <activity android:name=".module.docdetail.DocDetailActivity" />
+        <activity
+            android:name=".module.newsdetail.NewsDetailActivity"
+            android:theme="@style/AppTheme.Translucent.NewsDetailTheme" />
+        <activity android:name=".module.docdetail.BlogDetailActivity" />
+        <activity
+            android:name=".module.docdetail.Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
